End-of-day data functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,11 @@
 S3method("$",tsapi)
 S3method(print,tsapi)
 export(TushareApi)
+export(adjust_ohlc)
+export(daily)
 export(dapdv)
+export(intraday)
+export(mdaily)
 export(run_dapdv)
 import(Ckmeans.1d.dp)
 import(data.table)
