--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,11 +6,13 @@ export(TushareApi)
 export(adjust_ohlc)
 export(daily)
 export(dapdv)
+export(dapdv_plot)
 export(intraday)
 export(mdaily)
 export(run_dapdv)
 import(Ckmeans.1d.dp)
 import(data.table)
+import(ggplot2)
 import(httr)
 import(mixtools)
 import(shiny)
