--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Author: Jun <imlijunda@gmail.com>
 Maintainer: Jun <imlijunda@gmail.com>
 Description: Tushare Workbench (tswbench) is a rapid data analysis platform based
     on Tushare Pro (www.tushare.pro).
-Imports: data.table, httr, lubridate, Ckmeans.1d.dp, mixtools, utils, shiny
+Imports: data.table, httr, lubridate, Ckmeans.1d.dp, mixtools, utils, shiny, ggplot2
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
