experimental volume clock support

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(dapdv_plot)
 export(intraday)
 export(mdaily)
 export(run_dapdv)
+export(vclock_value)
+export(vclock_volume)
 import(Ckmeans.1d.dp)
 import(data.table)
 import(ggplot2)
