Basic realtime quotes from Sina

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,17 +7,21 @@ export(adjust_ohlc)
 export(daily)
 export(dapdv)
 export(dapdv_plot)
+export(get_sina_code)
 export(intraday)
 export(mdaily)
 export(run_dapdv)
+export(sina_realtime)
 export(vclock_value)
 export(vclock_volume)
 import(Ckmeans.1d.dp)
 import(data.table)
 import(ggplot2)
 import(httr)
+import(magrittr)
 import(mixtools)
 import(shiny)
+import(stringr)
 importFrom(lubridate,as_date)
 importFrom(lubridate,as_datetime)
 importFrom(utils,globalVariables)
