Worker to handle Sina realtime data.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,14 +4,18 @@ S3method("$",tsapi)
 S3method(print,tsapi)
 export(TushareApi)
 export(adjust_ohlc)
+export(csv_data_writer)
 export(daily)
 export(dapdv)
 export(dapdv_plot)
+export(example_data_handler)
+export(example_result_reporter)
 export(get_sina_code)
 export(intraday)
 export(mdaily)
 export(run_dapdv)
 export(sina_realtime)
+export(sina_realtime_worker)
 export(vclock_value)
 export(vclock_volume)
 import(Ckmeans.1d.dp)
