Much faster sina_data_parse

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ export(daily)
 export(dapdv)
 export(dapdv_plot)
 export(example_data_handler)
-export(example_result_reporter)
+export(example_signal_handler)
 export(get_sina_code)
 export(intraday)
 export(mdaily)
