squeezed a few more ms in sina_realtime

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(sina_realtime_worker)
 export(vclock_value)
 export(vclock_volume)
 import(Ckmeans.1d.dp)
+import(curl)
 import(data.table)
 import(ggplot2)
 import(httr)
