--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(example_data_handler)
 export(example_signal_handler)
 export(get_sina_code)
 export(intraday)
+export(market_report)
 export(mdaily)
 export(run_dapdv)
 export(sina_realtime)
