query quarterly report

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(get_sina_code)
 export(intraday)
 export(market_report)
 export(mdaily)
+export(quarterly_report)
 export(run_dapdv)
 export(sina_realtime)
 export(sina_realtime_worker)
