Query whole-market eod data: market_eod()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(example_data_handler)
 export(example_signal_handler)
 export(get_sina_code)
 export(intraday)
+export(market_eod)
 export(market_report)
 export(mdaily)
 export(quarterly_report)
