suppress curl import warning

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,6 @@ export(sina_realtime_worker)
 export(vclock_value)
 export(vclock_volume)
 import(Ckmeans.1d.dp)
-import(curl)
 import(data.table)
 import(ggplot2)
 import(httr)
@@ -30,6 +29,8 @@ import(magrittr)
 import(mixtools)
 import(shiny)
 import(stringr)
+importFrom(curl,curl_fetch_memory)
+importFrom(curl,new_handle)
 importFrom(lubridate,as_date)
 importFrom(lubridate,as_datetime)
 importFrom(utils,globalVariables)
