--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,33 +6,32 @@ export(GetToken)
 export(SetToken)
 export(TushareApi)
 export(adjust_ohlc)
-export(csv_data_writer)
 export(daily)
-export(dapdv)
-export(dapdv_plot)
-export(example_data_handler)
-export(example_signal_handler)
 export(get_sina_code)
 export(intraday)
 export(market_eod)
-export(market_report)
 export(mdaily)
-export(quarterly_report)
-export(run_dapdv)
-export(sina_realtime)
-export(sina_realtime_worker)
+export(report_market)
+export(report_quarter)
+export(sina_realtime_quote)
+export(tencent_realtime_moneyflow)
+export(tencent_realtime_quote)
+export(tushare_realtime_ping)
+export(tushare_realtime_websocket)
 export(vclock_value)
 export(vclock_volume)
-import(Ckmeans.1d.dp)
 import(data.table)
-import(ggplot2)
 import(httr)
+import(jsonlite)
 import(magrittr)
-import(mixtools)
-import(shiny)
 import(stringr)
+import(websocket)
 importFrom(curl,curl_fetch_memory)
 importFrom(curl,new_handle)
 importFrom(lubridate,as_date)
 importFrom(lubridate,as_datetime)
+importFrom(lubridate,force_tz)
+importFrom(lubridate,is.Date)
+importFrom(lubridate,parse_date_time2)
+importFrom(lubridate,with_tz)
 importFrom(utils,globalVariables)
