--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,9 +6,8 @@ Author: Jun <imlijunda@gmail.com>
 Maintainer: Jun <imlijunda@gmail.com>
 Description: Tushare Workbench (tswbench) is a rapid data analysis platform based
     on Tushare Pro (www.tushare.pro).
-Imports: data.table, curl, httr, lubridate, Ckmeans.1d.dp, mixtools, utils, shiny,
-     ggplot2, magrittr, stringr
+Imports: data.table, curl, httr, lubridate, utils, magrittr, stringr, websocket, jsonlite
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.0
