SQL utility functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,13 +6,17 @@ export(GetToken)
 export(SetToken)
 export(TushareApi)
 export(adjust_ohlc)
+export(create_index)
+export(create_table)
 export(daily)
 export(get_sina_code)
+export(insert_to)
 export(intraday)
 export(market_eod)
 export(mdaily)
 export(report_market)
 export(report_quarter)
+export(select_from)
 export(sina_realtime_quote)
 export(tencent_realtime_moneyflow)
 export(tencent_realtime_quote)
@@ -22,6 +26,7 @@ export(tushare_realtime_ping)
 export(tushare_realtime_websocket)
 export(vclock_value)
 export(vclock_volume)
+import(DBI)
 import(data.table)
 import(httr)
 import(jsonlite)
