--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,13 @@ export(GetToken)
 export(SetToken)
 export(TushareApi)
 export(adjust_ohlc)
+export(connect_srt_db)
 export(create_index)
+export(create_srt_db)
 export(create_table)
 export(daily)
 export(get_sina_code)
+export(get_srt_db)
 export(insert_to)
 export(intraday)
 export(market_eod)
@@ -17,6 +20,9 @@ export(mdaily)
 export(report_market)
 export(report_quarter)
 export(select_from)
+export(select_from_where)
+export(sina_realtime_loader)
+export(sina_realtime_loop)
 export(sina_realtime_quote)
 export(tencent_realtime_moneyflow)
 export(tencent_realtime_quote)
@@ -33,6 +39,7 @@ import(jsonlite)
 import(magrittr)
 import(stringr)
 import(websocket)
+importFrom(RSQLite,SQLite)
 importFrom(curl,curl_fetch_memory)
 importFrom(curl,new_handle)
 importFrom(lubridate,as_date)
