--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,12 +13,16 @@ export(create_table)
 export(daily)
 export(get_sina_code)
 export(get_srt_db)
+export(group_by_interval)
 export(insert_to)
 export(intraday)
 export(market_eod)
 export(mdaily)
 export(report_market)
 export(report_quarter)
+export(resample_intraday)
+export(resample_intraday_ashare)
+export(resample_ohlc_ashare)
 export(select_from)
 export(select_from_where)
 export(sina_realtime_loader)
