--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(connect_srt_db)
 export(create_index)
 export(create_srt_db)
 export(create_table)
+export(cumulative_cov)
+export(cumulative_moment)
 export(daily)
 export(get_sina_code)
 export(get_srt_db)
@@ -18,6 +20,9 @@ export(insert_to)
 export(intraday)
 export(market_eod)
 export(mdaily)
+export(moving_cov)
+export(moving_moment)
+export(moving_zscore)
 export(report_market)
 export(report_quarter)
 export(resample_intraday)
@@ -44,6 +49,7 @@ import(magrittr)
 import(stringr)
 import(websocket)
 importFrom(RSQLite,SQLite)
+importFrom(collections,queue)
 importFrom(curl,curl_fetch_memory)
 importFrom(curl,new_handle)
 importFrom(lubridate,as_date)
