online moving average

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,19 +10,30 @@ export(connect_srt_db)
 export(create_index)
 export(create_srt_db)
 export(create_table)
-export(cumulative_cov)
-export(cumulative_moment)
 export(daily)
 export(get_sina_code)
 export(get_srt_db)
 export(group_by_interval)
 export(insert_to)
 export(intraday)
+export(make_cumulative_cov)
+export(make_cumulative_moment)
+export(make_dema)
+export(make_ema)
+export(make_fame_median)
+export(make_hma)
+export(make_kama)
+export(make_macd)
+export(make_moving_cov)
+export(make_moving_moment)
+export(make_moving_zscore)
+export(make_sma)
+export(make_tema)
+export(make_vwma)
+export(make_wma)
+export(make_zlema)
 export(market_eod)
 export(mdaily)
-export(moving_cov)
-export(moving_moment)
-export(moving_zscore)
 export(report_market)
 export(report_quarter)
 export(resample_intraday)
