--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ import(magrittr)
 import(stringr)
 import(websocket)
 importFrom(RSQLite,SQLite)
+importFrom(collections,deque)
 importFrom(collections,queue)
 importFrom(curl,curl_fetch_memory)
 importFrom(curl,new_handle)
