more robust A-share code parsing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,6 @@ export(create_index)
 export(create_srt_db)
 export(create_table)
 export(daily)
-export(get_sina_code)
 export(get_srt_db)
 export(group_by_interval)
 export(insert_to)
@@ -30,10 +29,13 @@ export(make_moving_zscore)
 export(make_sma)
 export(make_tema)
 export(make_vwma)
+export(make_wilders)
 export(make_wma)
 export(make_zlema)
 export(market_eod)
 export(mdaily)
+export(norm_ashare_code)
+export(parse_ashare_code)
 export(report_market)
 export(report_quarter)
 export(resample_intraday)
@@ -41,6 +43,7 @@ export(resample_intraday_ashare)
 export(resample_ohlc_ashare)
 export(select_from)
 export(select_from_where)
+export(sina_ashare_code)
 export(sina_realtime_loader)
 export(sina_realtime_loop)
 export(sina_realtime_quote)
