update online functions to Rcpp ver

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,15 +16,26 @@ export(group_by_interval)
 export(insert_to)
 export(intraday)
 export(make_cumulative_cov)
+export(make_cumulative_mean)
 export(make_cumulative_moment)
+export(make_cumulative_sd)
 export(make_dema)
 export(make_ema)
-export(make_fame_median)
 export(make_hma)
 export(make_kama)
 export(make_macd)
+export(make_moving_argmax)
+export(make_moving_argmin)
 export(make_moving_cov)
+export(make_moving_gastwirth)
+export(make_moving_max)
+export(make_moving_mean)
+export(make_moving_median)
+export(make_moving_min)
 export(make_moving_moment)
+export(make_moving_quantile)
+export(make_moving_sd)
+export(make_moving_sorted)
 export(make_moving_zscore)
 export(make_sma)
 export(make_tema)
@@ -56,6 +67,7 @@ export(tushare_realtime_websocket)
 export(vclock_value)
 export(vclock_volume)
 import(DBI)
+import(Rcpp)
 import(data.table)
 import(httr)
 import(jsonlite)
@@ -63,8 +75,6 @@ import(magrittr)
 import(stringr)
 import(websocket)
 importFrom(RSQLite,SQLite)
-importFrom(collections,deque)
-importFrom(collections,queue)
 importFrom(curl,curl_fetch_memory)
 importFrom(curl,new_handle)
 importFrom(lubridate,as_date)
@@ -74,3 +84,4 @@ importFrom(lubridate,is.Date)
 importFrom(lubridate,parse_date_time2)
 importFrom(lubridate,with_tz)
 importFrom(utils,globalVariables)
+useDynLib(tswbench, .registration = TRUE)
