--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,8 +7,11 @@ Maintainer: Jun <imlijunda@gmail.com>
 Description: Tushare Workbench (tswbench) is a rapid data analysis platform based
     on Tushare Pro (www.tushare.pro).
 Imports: data.table, curl, httr, lubridate, utils, magrittr, stringr, websocket, 
-    jsonlite, DBI, RSQLite, collections
+    jsonlite, DBI, RSQLite, Rcpp (>= 1.0.1)
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+LinkingTo: Rcpp
 RoxygenNote: 7.1.0
+Suggests: 
+    testthat, zoo, roll, moments
