online volume clock

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,8 @@ export(make_moving_sorted)
 export(make_moving_zscore)
 export(make_sma)
 export(make_tema)
+export(make_volclk_order)
+export(make_volclk_tick)
 export(make_vwma)
 export(make_wilders)
 export(make_wma)
@@ -64,8 +66,6 @@ export(tsapi_func)
 export(tsapi_usage)
 export(tushare_realtime_ping)
 export(tushare_realtime_websocket)
-export(vclock_value)
-export(vclock_volume)
 import(DBI)
 import(Rcpp)
 import(data.table)
