implemented some adaptive filters

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,8 @@ export(make_cumulative_moment)
 export(make_cumulative_sd)
 export(make_dema)
 export(make_ema)
+export(make_filter_rls_linear)
+export(make_filter_rls_poly)
 export(make_hma)
 export(make_kama)
 export(make_macd)
@@ -47,6 +49,9 @@ export(make_wma)
 export(make_zlema)
 export(market_eod)
 export(mdaily)
+export(new_filter_GNGD)
+export(new_filter_NLMS)
+export(new_filter_RLS)
 export(norm_ashare_code)
 export(parse_ashare_code)
 export(report_market)
