added some (online/offline) indicators

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,27 +5,48 @@ S3method(print,tsapi)
 export(GetToken)
 export(SetToken)
 export(TushareApi)
+export(ad)
 export(adjust_ohlc)
+export(adosc)
+export(ao)
+export(arosc)
+export(atr)
+export(cmo)
 export(connect_srt_db)
 export(create_index)
 export(create_srt_db)
 export(create_table)
 export(daily)
+export(dpo)
+export(emv)
 export(get_srt_db)
 export(group_by_interval)
 export(insert_to)
 export(intraday)
+export(macd)
+export(make_ad)
+export(make_adosc)
+export(make_ao)
+export(make_arosc)
+export(make_atr)
+export(make_cmo)
 export(make_cumulative_cov)
 export(make_cumulative_mean)
 export(make_cumulative_moment)
 export(make_cumulative_sd)
 export(make_dema)
+export(make_dpo)
 export(make_ema)
+export(make_emv)
 export(make_filter_rls_linear)
 export(make_filter_rls_poly)
 export(make_hma)
 export(make_kama)
+export(make_lag)
+export(make_lag_delta)
+export(make_lag_ratio)
 export(make_macd)
+export(make_mass)
 export(make_moving_argmax)
 export(make_moving_argmin)
 export(make_moving_cov)
@@ -39,26 +60,32 @@ export(make_moving_quantile)
 export(make_moving_sd)
 export(make_moving_sorted)
 export(make_moving_zscore)
+export(make_ppo)
+export(make_rsi)
 export(make_sma)
 export(make_tema)
 export(make_volclk_order)
 export(make_volclk_tick)
 export(make_vwma)
 export(make_wilders)
+export(make_willr)
 export(make_wma)
 export(make_zlema)
 export(market_eod)
+export(mass)
 export(mdaily)
 export(new_filter_GNGD)
 export(new_filter_NLMS)
 export(new_filter_RLS)
 export(norm_ashare_code)
 export(parse_ashare_code)
+export(ppo)
 export(report_market)
 export(report_quarter)
 export(resample_intraday)
 export(resample_intraday_ashare)
 export(resample_ohlc_ashare)
+export(rsi)
 export(select_from)
 export(select_from_where)
 export(sina_ashare_code)
@@ -71,6 +98,7 @@ export(tsapi_func)
 export(tsapi_usage)
 export(tushare_realtime_ping)
 export(tushare_realtime_websocket)
+export(willr)
 import(DBI)
 import(Rcpp)
 import(data.table)
