vidya and various ma offline ver.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,12 +17,16 @@ export(create_index)
 export(create_srt_db)
 export(create_table)
 export(daily)
+export(dema)
 export(dpo)
+export(ema)
 export(emv)
 export(get_srt_db)
 export(group_by_interval)
+export(hma)
 export(insert_to)
 export(intraday)
+export(kama)
 export(macd)
 export(make_ad)
 export(make_adosc)
@@ -64,6 +68,7 @@ export(make_ppo)
 export(make_rsi)
 export(make_sma)
 export(make_tema)
+export(make_vidya)
 export(make_volclk_order)
 export(make_volclk_tick)
 export(make_vwma)
@@ -92,13 +97,20 @@ export(sina_ashare_code)
 export(sina_realtime_loader)
 export(sina_realtime_loop)
 export(sina_realtime_quote)
+export(sma)
+export(tema)
 export(tencent_realtime_moneyflow)
 export(tencent_realtime_quote)
 export(tsapi_func)
 export(tsapi_usage)
 export(tushare_realtime_ping)
 export(tushare_realtime_websocket)
+export(vidya)
+export(vwma)
+export(wilders)
 export(willr)
+export(wma)
+export(zlema)
 import(DBI)
 import(Rcpp)
 import(data.table)
