cci, obv, p/nvi indicators

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(adosc)
 export(ao)
 export(arosc)
 export(atr)
+export(cci)
 export(cmo)
 export(connect_srt_db)
 export(create_index)
@@ -33,6 +34,7 @@ export(make_adosc)
 export(make_ao)
 export(make_arosc)
 export(make_atr)
+export(make_cci)
 export(make_cmo)
 export(make_cumulative_cov)
 export(make_cumulative_mean)
@@ -64,6 +66,8 @@ export(make_moving_quantile)
 export(make_moving_sd)
 export(make_moving_sorted)
 export(make_moving_zscore)
+export(make_obv)
+export(make_pnvi)
 export(make_ppo)
 export(make_rsi)
 export(make_sma)
@@ -83,7 +87,9 @@ export(new_filter_GNGD)
 export(new_filter_NLMS)
 export(new_filter_RLS)
 export(norm_ashare_code)
+export(obv)
 export(parse_ashare_code)
+export(pnvi)
 export(ppo)
 export(report_market)
 export(report_quarter)
