added mfi, moving mae

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,10 +53,12 @@ export(make_lag_delta)
 export(make_lag_ratio)
 export(make_macd)
 export(make_mass)
+export(make_mfi)
 export(make_moving_argmax)
 export(make_moving_argmin)
 export(make_moving_cov)
 export(make_moving_gastwirth)
+export(make_moving_mae)
 export(make_moving_max)
 export(make_moving_mean)
 export(make_moving_median)
@@ -83,6 +85,7 @@ export(make_zlema)
 export(market_eod)
 export(mass)
 export(mdaily)
+export(mfi)
 export(new_filter_GNGD)
 export(new_filter_NLMS)
 export(new_filter_RLS)
