--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,7 @@ export(make_ppo)
 export(make_rsi)
 export(make_sma)
 export(make_tema)
+export(make_trix)
 export(make_vidya)
 export(make_volclk_order)
 export(make_volclk_tick)
@@ -110,6 +111,7 @@ export(sma)
 export(tema)
 export(tencent_realtime_moneyflow)
 export(tencent_realtime_quote)
+export(trix)
 export(tsapi_func)
 export(tsapi_usage)
 export(tushare_realtime_ping)
