exported lag, mov/cum zscore

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(adjust_ohlc)
 export(adosc)
 export(ao)
 export(arosc)
+export(ashare_intraday_tsec)
 export(atr)
 export(cci)
 export(cmo)
@@ -28,6 +29,9 @@ export(hma)
 export(insert_to)
 export(intraday)
 export(kama)
+export(lag_delta)
+export(lag_delta_moving_sum)
+export(lag_ratio)
 export(macd)
 export(make_ad)
 export(make_adosc)
@@ -40,6 +44,8 @@ export(make_cumulative_cov)
 export(make_cumulative_mean)
 export(make_cumulative_moment)
 export(make_cumulative_sd)
+export(make_cumulative_volatility)
+export(make_cumulative_zscore)
 export(make_dema)
 export(make_dpo)
 export(make_ema)
@@ -50,6 +56,7 @@ export(make_hma)
 export(make_kama)
 export(make_lag)
 export(make_lag_delta)
+export(make_lag_delta_moving_sum)
 export(make_lag_ratio)
 export(make_macd)
 export(make_mass)
@@ -67,6 +74,7 @@ export(make_moving_moment)
 export(make_moving_quantile)
 export(make_moving_sd)
 export(make_moving_sorted)
+export(make_moving_volatility)
 export(make_moving_zscore)
 export(make_obv)
 export(make_pnvi)
