online stats based on online moments

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(make_cumulative_cov)
 export(make_cumulative_mean)
 export(make_cumulative_moment)
 export(make_cumulative_sd)
+export(make_cumulative_stats)
 export(make_cumulative_volatility)
 export(make_cumulative_zscore)
 export(make_dema)
@@ -74,6 +75,7 @@ export(make_moving_moment)
 export(make_moving_quantile)
 export(make_moving_sd)
 export(make_moving_sorted)
+export(make_moving_stats)
 export(make_moving_volatility)
 export(make_moving_zscore)
 export(make_obv)
