fixed ocls_volclk_tick returned dim

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -125,6 +125,7 @@ export(trix)
 export(tsapi_func)
 export(tsapi_usage)
 export(tushare_realtime_ping)
+export(tushare_realtime_start)
 export(tushare_realtime_websocket)
 export(vidya)
 export(vwma)
