refactored Tushare realtime

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -126,6 +126,8 @@ export(tsapi_func)
 export(tsapi_usage)
 export(tushare_realtime_ping)
 export(tushare_realtime_start)
+export(tushare_realtime_stop)
+export(tushare_realtime_tick_parser)
 export(tushare_realtime_websocket)
 export(vidya)
 export(vwma)
