--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,6 @@ export(adjust_ohlc)
 export(adosc)
 export(ao)
 export(arosc)
-export(ashare_intraday_tsec)
 export(atr)
 export(cci)
 export(cmo)
@@ -24,7 +23,7 @@ export(dpo)
 export(ema)
 export(emv)
 export(get_srt_db)
-export(group_by_interval)
+export(grp_interval)
 export(hma)
 export(insert_to)
 export(intraday)
@@ -107,8 +106,6 @@ export(pnvi)
 export(ppo)
 export(report_market)
 export(report_quarter)
-export(resample_intraday)
-export(resample_intraday_ashare)
 export(resample_ohlc_ashare)
 export(rsi)
 export(select_from)
@@ -121,9 +118,14 @@ export(sma)
 export(tema)
 export(tencent_realtime_moneyflow)
 export(tencent_realtime_quote)
+export(transform_ohlc)
+export(transform_price)
 export(trix)
+export(trsmp_intraday)
+export(trsmp_intraday_ashare)
 export(tsapi_func)
 export(tsapi_usage)
+export(tsec_intraday_ashare)
 export(tushare_realtime_ping)
 export(tushare_realtime_start)
 export(tushare_realtime_stop)
