Renamed time bucketing function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -115,14 +115,14 @@ export(sina_realtime_loader)
 export(sina_realtime_loop)
 export(sina_realtime_quote)
 export(sma)
+export(tbucket_intraday)
+export(tbucket_intraday_ashare)
 export(tema)
 export(tencent_realtime_moneyflow)
 export(tencent_realtime_quote)
 export(transform_ohlc)
 export(transform_price)
 export(trix)
-export(trsmp_intraday)
-export(trsmp_intraday_ashare)
 export(tsapi_func)
 export(tsapi_usage)
 export(tsec_intraday_ashare)
