mitigate edge cases when Sina inserts non-monotonic vols

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -110,6 +110,7 @@ export(resample_ohlc_ashare)
 export(rsi)
 export(select_from)
 export(select_from_where)
+export(shdjt_ashare_code)
 export(sina_ashare_code)
 export(sina_realtime_loader)
 export(sina_realtime_loop)
