--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(dema)
 export(dpo)
 export(ema)
 export(emv)
+export(filter_bookdepth)
 export(get_srt_db)
 export(grp_interval)
 export(hma)
@@ -108,6 +109,7 @@ export(report_market)
 export(report_quarter)
 export(resample_ohlc_ashare)
 export(rsi)
+export(select_bookdepth)
 export(select_from)
 export(select_from_where)
 export(shdjt_ashare_code)
@@ -116,6 +118,7 @@ export(sina_realtime_loader)
 export(sina_realtime_loop)
 export(sina_realtime_quote)
 export(sma)
+export(spread_bookdepth)
 export(tbucket_intraday)
 export(tbucket_intraday_ashare)
 export(tema)
