--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(create_index)
 export(create_srt_db)
 export(create_table)
 export(daily)
+export(default_srt_codes)
 export(dema)
 export(dpo)
 export(ema)
@@ -26,8 +27,10 @@ export(filter_bookdepth)
 export(get_srt_db)
 export(grp_interval)
 export(hma)
+export(idate_now)
 export(insert_to)
 export(intraday)
+export(itime_now)
 export(kama)
 export(lag_delta)
 export(lag_delta_moving_sum)
