exported generic rt loop

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,8 +13,11 @@ export(arosc)
 export(atr)
 export(cci)
 export(cmo)
+export(connect_rt_db)
 export(connect_srt_db)
 export(create_index)
+export(create_rt_loader)
+export(create_rt_loop)
 export(create_srt_db)
 export(create_table)
 export(daily)
@@ -24,6 +27,7 @@ export(dpo)
 export(ema)
 export(emv)
 export(filter_bookdepth)
+export(get_rt_db)
 export(get_srt_db)
 export(grp_interval)
 export(hma)
@@ -112,6 +116,8 @@ export(report_market)
 export(report_quarter)
 export(resample_ohlc_ashare)
 export(rsi)
+export(rt_exit_timer)
+export(rt_sleep_timer)
 export(select_bookdepth)
 export(select_from)
 export(select_from_where)
