export P^2 and KLL for quantile est.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,8 @@ export(make_cmo)
 export(make_cumulative_cov)
 export(make_cumulative_mean)
 export(make_cumulative_moment)
+export(make_cumulative_psquare)
+export(make_cumulative_quantile)
 export(make_cumulative_sd)
 export(make_cumulative_stats)
 export(make_cumulative_volatility)
