--- a/NAMESPACE
+++ b/NAMESPACE
@@ -160,11 +160,13 @@ import(stringr)
 importFrom(RSQLite,SQLite)
 importFrom(curl,curl_fetch_memory)
 importFrom(curl,new_handle)
+importFrom(digest,digest)
 importFrom(lubridate,as_date)
 importFrom(lubridate,as_datetime)
 importFrom(lubridate,force_tz)
 importFrom(lubridate,is.Date)
 importFrom(lubridate,parse_date_time2)
 importFrom(lubridate,with_tz)
+importFrom(stats,na.omit)
 importFrom(utils,globalVariables)
 useDynLib(tswbench, .registration = TRUE)
